# fivem-updater

./: .gitignore  README.md  pyproject.toml
docs/plans/: fivemanager-0.9-rewrite.md
src/fivemanager/: __init__.py  artifacts.py  backup.py  cli.py  config.py  installer.py  paths.py  tmux.py  txadmin.py  ui.py  updater.py  wizard.py
src/updatefivem/: __init__.py  artifacts.py  cli.py  config.py  installer.py  paths.py  service.py  ui.py  updater.py
tests/: test_add_server.py  test_artifacts.py  test_backup_txadmin_tmux.py  test_cli_service_prompts.py  test_config.py  test_installer.py  test_service.py  test_updater.py  test_user_facing_wording.py
