[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "updatefivem"
version = "0.1.13"
description = "FiveM artifact updater and tmux-backed service manager"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Next Level Studio" }]
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
updatefivem = "updatefivem.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
