[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fivemanager"
version = "0.9.7"
description = "FiveManager: FiveM runtime updater and tmux-based multi-server manager"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Next Level Studio" }]
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "InquirerPy>=0.3.4",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
fivemanager = "fivemanager.cli:app"
updatefivem = "fivemanager.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
